@@ -1,255 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en">
-
-<head>
-
-<title>NewPoints - Readme</title>
-
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-<link type="text/css" rel="stylesheet" href="Readme/global.css">
-<link href="Readme/css.css" rel="stylesheet" type="text/css">
-<link rel="icon" href="http://forums.mybb-plugins.com/images/favicon.png" type="image/x-icon">
-
-</head>
-
-<body>
-
-<div id="header">
-	<div class="menu_back">  
-			<div class="menu">
-				<ul>
-					<li><a href="#description">Description</a></li>
-					<li><a href="#installation">Installation</a></li>
-					<li><a href="#upgrading">Upgrading</a></li>
-					<li><a href="#instructions">Instructions</a></li>
-					<li><a href="#support">Support</a></li>
-				</ul>
-			</div>
-	</div>			
-		
-	<hr class="hidden">
-</div>	
-<br />
-
-<a name="top" id="top"></a>
-
-<div id="container">
-		
-	<hr class="hidden" />
-		<div id="content">
-	
-			<div class="navigation">
-				<span class="active">NewPoints</span>
-			</div>
-
-			<br />
-
-
-			<table class="tborder" border="0" cellpadding="4" cellspacing="0">
-			<thead>
-			<tr>
-			<td>
-			</td>
-			</tr>
-			</thead>
-			<tbody style="">
-				<tr>
-				<td class="tcat_1"><strong><a name="description" id="description">Description</a></strong></td>
-				</tr>
-				<tr>
-				<td class="tfoot">
-				
-					<p>The best points system for <a href="http://mybb.com" target="_blank">MyBB</a>.</p>
-					<p><strong>Main Features:</strong></p>
-					<p>
-						<ul>
-							<li><strong>Main settings</strong>
-							  <ul>
-								<li>NewPoints enabled.</li>
-								<li>Currency Name</li>
-								<li>Currency Prefix.</li>
-								<li>Currency Suffix.</li>
-								<li>Decimal places.</li>
-								<li>Statistics visible to users.</li>
-								<li>Donations enabled.</li>
-								<li>Send PM on donate.</li>
-								<li>Number of last donations to show.</li>
-								<li>Number of richest users to show.</li>
-							  </ul>
-							</li>
-							<li><strong>Income settings</strong>
-							  <ul>
-								<li>Points per post.</li>
-								<li>Points per thread.</li>
-								<li>Points per poll.</li>
-								<li>Points per character (on new post and new thread).</li>
-								<li>Minimum characters required to multiply points per character.</li>
-								<li>Points on registration.</li>
-								<li>Points per poll vote.</li>
-								<li>Points per reply (points given to the author of the thread).</li>
-								<li>Points per PM sent.</li>
-								<li>Points per page view.</li>
-								<li>Points per visit (MyBB Session).</li>
-								<li>Points per referral.</li>
-							  </ul>
-						  </li>
-							<li>Seperated plugins system. (based off MyBB's one)</li>
-							<li>Seperated settings system. (based off MyBB's one)</li>
-							<li>Upgrade system.</li>
-							<li>Maintenance page to recount points, reset points, edit user's points and reconstruct templates.</li>
-							<li>Easy-to-edit templates.</li>
-							<li>Forum Rules. (income rate, <strong>minimum points to view, minimum points to create a new post/thread</strong>)</li>
-							<li>User Group rules (income rate, <strong>amount of points to pay to this group, number of seconds between payments</strong>).</li>
-							<li>Task which creates a backup of NewPoints default tables as well as newpoints field in the users table. (backups are saved to admin/backups/backupnewpoints/)</li>
-							<li>Shows number of points in profile and post bit.</li>
-						</ul>
-					</p>
-				</td>
-				</tr>
-				<tr>
-					<td>&nbsp;</td>
-				</tr>
-				<tr>
-				<td class="tcat_1"><strong><a name="installation" id="installation">Installation</a></strong></td>
-				</tr>
-				<tr>
-				<td class="tfoot">
-				
-					<p>Simply upload the contents of the &quot;Upload&quot; folder to the root of your MyBB installation.</p>
-					<p>Then, activate NewPoints from the Administrator Panel and chmod the backups directory (admin/backups/backupnewpoints).</p>
-					<p>If you want to activate weekly backups, just enable the &quot;Backup NewPoints&quot; task.</p>
-				
-				</td>
-				</tr>
-				<tr>
-					<td>&nbsp;</td>
-				</tr>
-				<tr>
-				<td class="tcat_1"><strong><a name="upgrading" id="upgrading">Upgrading</a></strong></td>
-				</tr>
-				<tr>
-				<td class="tfoot">
-				
-					<p><strong>Upgrading from 1.9.5/1.9.6 to 1.9.7</strong></p>
-					<p>Upload the contents of the &quot;Upload&quot; folder to the root of your MyBB installation, overwritting the old files.</p>
-					<p><strong>Upgrading from 1.9.5 to 1.9.6</strong></p>
-					<p>Upload the contents of the &quot;Upload&quot; folder to the root of your MyBB installation, overwritting the old files.</p>
-					<p><strong>Upgrading from 1.9.4 to 1.9.5</strong></p>
-					<p>Upload the contents of the &quot;Upload&quot; folder to the root of your MyBB installation, overwritting the old files.</p>
-					<p>Then, go to Admin CP -> NewPoints -> Upgrades -> Run the "Upgrade to 1.9.5" upgrade.</p>
-					<p><strong>Upgrading from 1.9/1.9.1/1.9.2/1.9.3 to 1.9.4</strong></p>
-					<p>Simply upload the contents of the &quot;Upload&quot; folder to the root of your MyBB installation, overwritting the old files.</p>
-					<p><strong>Upgrading from 1.8 to 1.9</strong></p>
-					<p>Upload the contents of the &quot;Upload&quot; folder to the root of your MyBB installation, overwritting the old files.</p>
-					<p>Then, go to Admin CP -> NewPoints -> Upgrades -> Run the "Upgrade to 1.9" upgrade.</p>
-					<p><strong>Upgrading from 1.7 to 1.8</strong></p>
-					<p>Simply upload the contents of the &quot;Upload&quot; folder to the root of your MyBB installation, overwritting the old files.</p>
-					<p><strong>Upgrading from 1.6 to 1.7</strong></p>
-					<p>Simply upload the contents of the &quot;Upload&quot; folder to the root of your MyBB installation, overwritting the old files.</p>
-					<p><strong>Upgrading from 1.5 to 1.6</strong></p>
-					<p>Simply upload the contents of the &quot;Upload&quot; folder to the root of your MyBB installation, overwritting the old files.</p>
-					<p><strong>Upgrading from 1.4 to 1.5</strong></p>
-					<p>Simply upload the contents of the &quot;Upload&quot; folder to the root of your MyBB installation, overwritting the old files.</p>
-					<p><strong>Upgrading from 1.3 to 1.4</strong></p>
-					<p>Simply upload the contents of the &quot;Upload&quot; folder to the root of your MyBB installation, overwritting the old files.</p>
-					<p>If you had Bank 1.0 installed, you'll also have to deactivate it and activate it back.</p>
-					<p><strong>Upgrading from 1.2 to 1.3</strong></p>
-					<p>Simply upload the contents of the &quot;Upload&quot; folder to the root of your MyBB installation, overwritting the old files.</p>
-					<p><strong>Upgrading from 1.1 to 1.3</strong></p>
-					<p>Upload the contents of the &quot;Upload&quot; folder to the root of your MyBB installation, overwritting the old files.</p>
-					<p>Then, go to Admin CP -> NewPoints -> Upgrades -> Run the "Upgrade to 1.2" upgrade. Note that your old group and forum rules will be deleted.</p>
-					<p>Done!</p>
-				
-				</td>
-				</tr>
-				<tr>
-					<td>&nbsp;</td>
-				</tr>
-				<tr>
-				<td class="tcat_1"><strong><a name="instructions" id="instructions">Instructions</a></strong></td>
-				</tr>
-				<tr>
-				<td class="tfoot">
-				
-					<p><strong>Plugins</strong></p>
-					<p>NewPoints's plugins must be uploaded to inc/plugins/newpoints and must be activated from NewPoints Plugins page.</p>
-					<p>For a list of available plugins please see <a href="http://forums.mybb-plugins.com/Forum-Plugins">this</a> page.</p>
-					<p><strong>Settings</strong></p>
-					<p>NewPoints's settings (including its plugins's settings) can be found in NewPoints (top tab) -&gt; Settings (side bar tab).</p>
-					<p>Default NewPoints settings are inside the groups &quot;Main&quot; and &quot;Income&quot;.</p>
-					<p><strong>Log</strong></p>
-					<p>From here, you can view all log entries. By default (without plugins), only donations are logged as there is nothing else to log.</p>
-					<p>Log entries can be deleted one by one or pruned.</p>
-					<p>Note: last donations are based off logs, so by deleting logs statistics will be affected.</p>
-					<p><strong>Maintenance</strong></p>
-
-					<p>From the Maintenance page (NewPoints (top tab) -&gt; Maintenance (side bar tab)) you can recount or reset everyone's points, edit someone's points or reconstruct templates to fix duplicates. (like double points showing up in the postbit or profile)</p>
-					<p><strong>Forum Rules</strong></p>
-					<p>I called them forum rules but maybe I should have called them &quot;Forum Exceptions&quot; because that's what they are.</p>
-					<p>You can set a custom income rate (by default, the income rate for every forum is 1) for each forum, as well as a minimum points to view the forum (view forum includes viewing threads within the forum, editing posts, view archive to view threads and the forum and sending thread), and set a minimum points to create a new post or thread. If the user doesn't have the required amount of points, an error page shows up informing the user how many points the user needs in order to execute that action.</p>
-					<p><strong>User Group Rules</strong></p>
-					<p>User group rules work the same way Froum Rules do, except that they have no minimum points to view or post rules, only income rate.</p>
-					<p><strong>Statistics</strong></p>
-					<p>The statistics page provides you information about  the last donations and richest users.</p>
-					<p>There is a statistics page which can be accessed by regular users: /newpoints.php?action=stats (this page can be disabled from the Main settings group)</p>
-				
-				</td>
-				</tr>
-				<tr>
-					<td>&nbsp;</td>
-				</tr>
-				<tr>
-				<td class="tcat_1"><strong><a name="support" id="support">Support</a></strong></td>
-				</tr>
-				<tr>
-				<td class="tfoot">
-				
-					<p>If you have any questions, ask them at <a href="http://forums.mybb-plugins.com">MyBB-Plugins</a>.</p>
-				
-				</td>
-				</tr>
-				<tr>
-					<td>&nbsp;</td>
-				</tr>
-				<tr>
-				<td class="tcat_1"><strong><a name="thanks" id="thanks">Special Thanks</a></strong></td>
-				</tr>
-				<tr>
-				<td class="tfoot">
-				
-					<p>
-						<ul>
-							<li><a href="http://forums.mybb-plugins.com/user-883.html">Andrew</a></li>
-							<li><a href="http://forums.mybb-plugins.com/user-884.html">Glas</a></li>
-							<li><a href="http://community.mybb.com/user-17052.html">Mark.M</a</li>
-							<li><a href="http://community.mybb.com/user-22890.html">ralgith</a</li>
-							<li><a href="http://mybbhacks.zingaburga.com/member.php?action=profile&uid=1">ZiNgA BuRgA/Yumi</a></li>
-						</ul>
-					</p>
-				
-				</td>
-				</tr>
-				
-			</tbody>
-			</table>
-
-			<hr class="hidden" />
-
-			<br class="clear">
-			<br />
-
-			<div class="bottommenu">
-				<div style="float: right">Copyright &copy 2013 MyBB-Plugins.com</div>
-				<div>
-					<a href="mailto:support@mybb-plugins.com">Contact Us</a> | <a href="http://forums.mybb-plugins.com/">MyBB-Plugins</a> | <a href="#top">Return to Top</a>
-				</div>
-			</div>
-
-		</div>
-	</div>
-<br />
-
-
-</body>
-</html>
